@@ -34,6 +34,8 @@ importFrom(BiocNeighbors,queryKNN)
 importFrom(BiocParallel,SerialParam)
 importFrom(BiocParallel,bpisup)
 importFrom(BiocParallel,bplapply)
+importFrom(BiocParallel,bpmapply)
+importFrom(BiocParallel,bpnworkers)
 importFrom(BiocParallel,bpstart)
 importFrom(BiocParallel,bpstop)
 importFrom(BiocSingular,bsparam)
@@ -66,13 +68,16 @@ importFrom(S4Vectors,selfmatch)
 importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(SummarizedExperiment,assay)
 importFrom(beachmat,colBlockApply)
+importFrom(beachmat,realizeFileBackedMatrix)
 importFrom(beachmat,toCsparse)
 importFrom(methods,as)
 importFrom(methods,is)
+importFrom(parallel,nextRNGStream)
 importFrom(stats,kmeans)
 importFrom(stats,mad)
 importFrom(stats,median)
 importFrom(stats,rnorm)
 importFrom(stats,rpois)
+importFrom(stats,runif)
 importFrom(utils,head)
 useDynLib(SingleR)
